# imesa-experiments

./: CMakeLists.txt  README.md
experiments/: CMakeLists.txt  README.md  run-trial.cpp
experiments/config/communication_models/: pairwise.json
experiments/config/methods/: ddfsam2.json  imesa.json  independent.json
experiments/include/experiments/: communication_model.h  config.h  experiment_runner.h  factory.h
experiments/scripts/: animate-jrl-2d  compute-iate  make-multi-robot-dataset-2d  make-multi-robot-dataset-3d  make-multi-robot-landmark-dataset-2d  plot-jrl  plot-many-result-error  plot-many-results  plot-mean-residual  plot-results  plot-timing  plot-timing-async  run-experiment  summarize-experiment  summarize-iteration-times  summarize-timing
experiments/scripts/helpers/: method_style_sheet.py  metrics.py  parsing.py  plot_summaries.py  plot_trajectories.py  summarize_experiment.py  summarize_iteration_times.py  summarize_timing.py
experiments/src/: communication_model.cpp  config.cpp  experiment_runner.cpp  factory.cpp
prior_work/: CMakeLists.txt  README.md
prior_work/baselines/: CMakeLists.txt  README.md
prior_work/baselines/include/baselines/: baselines.h
prior_work/baselines/src/: baselines.cpp
prior_work/ddfsam2/: CMakeLists.txt
prior_work/ddfsam2/include/ddfsam2/: ddfsam2.h
prior_work/ddfsam2/src/: ddfsam2.cpp
